--- a/app/views/measurements/index.html.erb
+++ b/app/views/measurements/index.html.erb
@@ -1,6 +1,11 @@
 <h3>Measurements history</h3>
-<% @measurements.each do |measurement| %>
-  <div>
-    <%= measurement.reps %>
+<% @grouped_measurements.each do |k, v| %>
+  <div class='measurement-date'>
+    <h3><%= v.first.created_at.year %>-<%= v.first.created_at.month %>-<%= v.first.created_at.day %></h3>
+  </div>
+  <div class='group-measurements'>
+    <% v.each do |measurement| %>
+      <%= measurement.reps %>
+    <% end %>
   </div>
 <% end %>
