--- a/app/views/measurements/index.html.erb
+++ b/app/views/measurements/index.html.erb
@@ -1,7 +1,7 @@
 <h3>Measurements history</h3>
 <% @grouped_measurements.each do |k, v| %>
   <div class='measurement-date'>
-    <h3><%= v.first.created_at.year %>-<%= v.first.created_at.month %>-<%= v.first.created_at.day %></h3>
+    <h3><%= DateTime.new(v.first.created_at.year, v.first.created_at.month, v.first.created_at.day).strftime('%F') %></h3>
   </div>
   <div class='group-measurements'>
     <% v.each do |measurement| %>
