Add jQuery to project and quick increment buttons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,10 +8,14 @@
 </div>
 <div class='measurement-form'>
   <%= form_for @measurement do |form| %>
-    <%= form.number_field :reps %>
+    <%= form.number_field :reps, value: 0 %>
     <%= form.submit 'Submit' %>
   <% end %>
 </div>
-<br>
+<div class='measurement-tools'>
+  <button class='add-5' data-increment-value='5'>+5</button>
+  <button class='add-10' data-increment-value='10'>+10</button>
+</div>
+<br><br>
 <%= link_to 'View measurement history', measurements_path %>
 
