--- a/app/assets/stylesheets/measurements.scss
+++ b/app/assets/stylesheets/measurements.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the measurements controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.history-title {
+  text-align: center;
+  font-size: 36px;
+}
+.day-total {
+  color: #f47100;
+}
