--- a/app/views/measurements/index.html.erb
+++ b/app/views/measurements/index.html.erb
@@ -1,4 +1,4 @@
-<h3 class='history-title'>Measurements history</h3>
+<h3 class='history-title'>Measurements History</h3>
 <% @grouped_measurements.each do |k, v| %>
   <div class='measurement-date'>
     <h3><%= DateTime.new(v.first.created_at.year, v.first.created_at.month, v.first.created_at.day).strftime('%F') %></h3>
